--- a/src/main/webapp/VAADIN/widgetsets/choco.invientcharts.widgetset.InvientchartsWidgetset/hosted.html
+++ b/src/main/webapp/VAADIN/widgetsets/choco.invientcharts.widgetset.InvientchartsWidgetset/hosted.html
@@ -160,7 +160,8 @@ function __gwt_disconnected_impl() {
   __gwt_displayGlassMessage('GWT Code Server Disconnected',
       'Most likely, you closed GWT Development Mode. Or, you might have lost '
       + 'network connectivity. To fix this, try restarting GWT Development Mode and '
-      + 'refresh this page.');
+      + '<a style="color: #FFFFFF; font-weight: bold;" href="javascript:location.reload()">'
+      + 'REFRESH</a> this page.');
 }
 
 // Keep track of z-index to allow layering of multiple glass messages
@@ -279,15 +280,11 @@ gwtOnLoad = function(errFn, modName, modBase){
       } catch (e) {
       }
     }
-    loadIframe("http://www.gwtproject.org/missing-plugin/");
+    loadIframe("http://gwt.google.com/missing-plugin");
   } else {
     if (plugin.connect(url, topWin.__gwt_SessionID, $hosted, $moduleName,
         $hostedHtmlVersion)) {
-      // take over the onunload function, wrapping any existing call if it exists
-      var oldUnload = window.onunload;
-      window.onunload = function() {
-        // run wrapped unload first in case it is running gwt code
-        !!oldUnload && oldUnload();
+      window.onUnload = function() {
         try {
           // wrap in try/catch since plugins are not required to supply this
           plugin.disconnect();
@@ -298,23 +295,15 @@ gwtOnLoad = function(errFn, modName, modBase){
       if (errFn) {
         errFn(modName);
       } else {
-        __gwt_displayGlassMessage(
-            "Plugin failed to connect to Development Mode server at " + simpleEscape($hosted),
-            "Follow the troubleshooting instructions at "
-            + "<a href='http://code.google.com/p/google-web-toolkit/wiki/TroubleshootingOOPHM'>"
-            + "http://code.google.com/p/google-web-toolkit/wiki/TroubleshootingOOPHM</a>");
+        alert("Plugin failed to connect to Development Mode server at " + $hosted);
+        loadIframe("http://code.google.com/p/google-web-toolkit/wiki/TroubleshootingOOPHM");
       }
     }
   }
 }
 
-function simpleEscape(originalString) {
-  return originalString.replace(/&/g,"&amp;")
-    .replace(/</g,"&lt;")
-    .replace(/>/g,"&gt;")
-    .replace(/\'/g, "&#39;")
-    .replace(/\"/g,"&quot;");
-}
+window.onunload = function() {
+};
 
 // Lightweight metrics
 window.fireOnModuleLoadStart = function(className) {
